added main verticle deployment methods